--- a/index.html
+++ b/index.html
@@ -6,36 +6,36 @@
 
     <!-- Primary Meta Tags -->
     <title>Terminal Portfolio by Parsher</title>
-    <meta name="title" content="Terminal Portfolio by Parsher" />
+    <meta name="title" content="Terminal Portfolio by navnee1h" />
     <meta
       name="description"
-      content="Parsher's terminal portfolio website coded with ReactJS. Parsher is a full-stack developer based in Yangon, Myanmar."
+      content="navnee1h's terminal portfolio website coded with ReactJS. navaneeth m s is a cyber forensics student based in Kochi, Kerala."
     />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://terminal.parsher.xyz/" />
-    <meta property="og:title" content="Terminal Portfolio by Parsher" />
+    <meta property="og:url" content="https://navnee1h.github.io/" />
+    <meta property="og:title" content="Terminal Portfolio by navnee1h" />
     <meta
       property="og:description"
-      content="Parsher's terminal portfolio website coded with ReactJS. Parsher is a full-stack developer based in Yangon, Myanmar."
+      content="navnee1h's terminal portfolio website coded with ReactJS. navaneeth m s is a cyber forensics student based in Kochi, Kerala."
     />
     <meta
       property="og:image"
-      content="https://terminal.parsher.xyz/sat-naing-terminal-og.png"
+      content="#"
     />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://terminal.parsher.xyz/" />
-    <meta property="twitter:title" content="Terminal Portfolio by Parsher" />
+    <meta property="twitter:url" content="https://navnee1h.github.io/" />
+    <meta property="twitter:title" content="Terminal Portfolio by navnee1h" />
     <meta
-      property="twitter:description"
-      content="Parsher's terminal portfolio website coded with ReactJS. Parsher is a full-stack developer based in Yangon, Myanmar."
+      property="linkedin:description"
+      content="navnee1h's terminal portfolio website coded with ReactJS. navaneeth m s is a cyber forensics student based in Kochi, Kerala."
     />
     <meta
-      property="twitter:image"
-      content="https://terminal.parsher.xyz/sat-naing-terminal-og.png"
+      property="linkedin:image"
+      content="#"
     />
 
     <!-- Favicons and assets -->
