--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
-    <title>Terminal Portfolio by Parsher</title>
+    <title>Terminal Portfolio by navnee1h</title>
     <meta name="title" content="Terminal Portfolio by navnee1h" />
     <meta
       name="description"
